test/files/neg/bug708.check
bug708.scala:8: error: error overriding type S in trait X with bounds >: scala.Nothing <: A.this.T;
 type S has incompatible type scala.Any
    override private[A] type S = Any;
                             ^
one error found
